# Peridot

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Peridot/: CMakeLists.txt
Peridot/include/Peridot/: Buffer.h  Camera.h  Context.h  Core.h  Input.h  KeyCodes.h  MouseCodes.h  OrthographicCamController.h  PerspectiveCamController.h  RenderCalls.h  Renderer.h  Shader.h  Texture.h  TimeTracker.h  Utils.h  VertexArray.h
Peridot/src/: Buffer.cpp  Camera.cpp  Context.cpp  Core.cpp  Input.cpp  RenderCalls.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TimeTracker.cpp  Utils.cpp  VertexArray.cpp  stb_image.h
Sandbox/: CMakeLists.txt  Main.cpp  shader.frag  shader.vert
